--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body{
     border: 0;
     margin: 0;
-    background-color: rgb(245, 221, 192);
+
 }
 .container{
+    background-image: url('./Screenshot\ 2023-05-25\ 000904.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     border: 2px solid red;
     height: 100vh;
     margin: auto 0;
@@ -15,6 +19,10 @@ body{
     
     border: 3px solid yellow;
     background: white;
+    background-image: url('./scribble.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding:25px;
     margin: 0 auto;
     max-height: 100vh;
@@ -36,7 +44,7 @@ body{
     size: 20px;
   
 }
-.next-quote{
+#next-quote{
 width: 25%;
 border-radius: 15px;
 margin: 0 auto;
@@ -50,4 +58,11 @@ font-size: 15px;
     font-size: 30px;
     line-height: 2.5rem;
     text-align: center;
+}
+#athr-name{
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    margin-top: -20px;
 }
