--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body{
 }
 #next-quote{
 width: 25%;
-border-radius: 15px;
+background-color: black;
+color: white;
 margin: 0 auto;
 padding: 8px;
 margin-bottom: 2rem;
@@ -63,6 +64,6 @@ font-size: 15px;
     font-weight: bold;
     display: flex;
     justify-content: center;
-    font-size: 30px;
-    margin-top: -20px;
+    font-size: 20px;
+    margin-top: -4rem;
 }
