--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ padding: 8px;
 margin-bottom: 2rem;
 font-weight: bold;
 font-size: 15px;
+
+}
+#next-quote:hover{
+    cursor: pointer;
 }
 
 .quote-text{
